some improvements in order to be able to run. also did small refactoring (moving classes to proper packages)